--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "build": "NODE_ENV=production ./node_modules/.bin/webpack --config ./build/webpack.config.prod.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "moment": "^2.22.2",
+    "object-path": "^0.11.4",
+    "prop-types": "^15.6.2",
+    "vue": "^2.5.2",
+    "vue-bem-cn": "^1.1.1",
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.3.9",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
