--- a/.eslintrc
+++ b/.eslintrc
@@ -49,7 +49,8 @@
     "no-console": ["error", { "allow": ["error"] }]
   },
   "globals": {
-    "VERSION": true
+    "VERSION": true,
+    "apikey": true
   }
 }
 
